kubernetes/party-battle/frontend/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: ingressroute-party-battle
  labels:
    app.kubernetes.io/part-of: party-battle
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`party-battle.thirty-degrees.ch`)
      kind: Rule
      priority: 1
      services:
        - name: party-battle-frontend
          port: 80
  tls:
    certResolver: myresolver
